# Structure_data

./: CMakeLists.txt  DataComplictation.vsdx  IdGenerate.vsdx  IdWork.c  IdWork.h  PlaceControl.c  PlaceControl.h  README.md  admin.c  admin.h  admin.txt  adminData.txt  changeUser.c  changeUser.h  checking.c  checking.h  code.txt  hookUsers.c  hookUsers.h  insertplace.vsdx  main.c  main.vsdx  plan.drawio  quicksort.vsdx  remove.h  removeUser.c  serverControl.c  serverControl.h  sha256.h  sorting.c  sorting.h  startAdminPanel.vsdx  struct.h  systemTech.c  systemTech.h  userInfo.c  userInfo.h  ~$$quicksort.~vsdx  Алгоритм Sha 256.vsdx
